c4prj1_deck/grade.txt
Grading at Fri Oct  9 12:16:18 UTC 2020
Compiling deck.c -> deck.o
deck.c: In function ‘build_remaining_deck’:
deck.c:56:11: error: implicit declaration of function ‘is_card_valid’ [-Werror=implicit-function-declaration]
       if (is_card_valid(hands[i]->cards[j])==EXIT_SUCCESS){
           ^
deck.c:57:26: error: incompatible type for argument 2 of ‘add_card_to’
  add_card_to(hand_cards, hands[i]->cards[j]);
                          ^
deck.c:19:6: note: expected ‘card_t {aka struct card_tag}’ but argument is of type ‘card_t * {aka struct card_tag *}’
 void add_card_to(deck_t * deck, card_t c){
      ^
deck.c: In function ‘add_empty_card’:
deck.c:69:15: error: ‘n_cards’ undeclared (first use in this function)
   deck->cards[n_cards]=malloc(sizeof(card_t));
               ^
deck.c:69:15: note: each undeclared identifier is reported only once for each function it appears in
deck.c: In function ‘deck_contains’:
deck.c:94:21: error: invalid type argument of ‘->’ (have ‘deck_t {aka struct deck_tag}’)
     if (card2num(str->cards[i])==card2num(c)){
                     ^
deck.c: In function ‘add_empty_card’:
deck.c:74:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
